Add null decoder for uncompressed files.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,6 +5,7 @@ SRC= \
 	lha_decoder.h              \
 	lha_file_header.h          \
 	lha_input_stream.h         \
+	lha_null_decoder.h         \
 	lha_lzss_decoder.h         \
 	lha_reader.h
 
@@ -12,6 +13,7 @@ HEADER_FILES= \
 	lha_decoder.c              \
 	lha_file_header.c          \
 	lha_input_stream.c         \
+	lha_null_decoder.c         \
 	lha_lzss_decoder.c         \
 	lha_reader.c
 
