Add CRC32-based verification of decode.
Add CRC32 implementation and code to perform CRC on decompressed
data and check result.  Check -lz4- (uncompressed) output as well.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 
 AM_CFLAGS=$(TEST_CFLAGS) -I../lib -g
-LDADD=$(top_builddir)/lib/liblhasatest.a
+LDADD=$(top_builddir)/lib/liblhasatest.a libtestframework.a
 
 TESTS=                       \
 	test-larc
@@ -8,4 +8,8 @@ TESTS=                       \
 EXTRA_DIST=larc_lz4.lzs  larc_lz5.lzs
 
 check_PROGRAMS=$(TESTS)
+check_LIBRARIES=libtestframework.a
+
+libtestframework_a_SOURCES=     \
+	crc32.c crc32.h
 
