Fix Makefile for lib.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,20 +1,17 @@
 lib_LTLIBRARIES=liblhasa.la
 check_LIBRARIES=liblhasatest.a
 
-SRC= \
-	lha_decoder.h              \
+HEADER_FILES =                     \
 	lha_file_header.h          \
 	lha_input_stream.h         \
-	lha_null_decoder.h         \
-	lha_lzss_decoder.h         \
 	lha_reader.h
 
-HEADER_FILES= \
-	lha_decoder.c              \
-	lha_file_header.c          \
-	lha_input_stream.c         \
-	lha_null_decoder.c         \
-	lha_lzss_decoder.c         \
+SRC =                                                   \
+	lha_decoder.c           lha_decoder.h           \
+	lha_file_header.c                               \
+	lha_input_stream.c                              \
+	lha_null_decoder.c      lha_null_decoder.h      \
+	lha_lzss_decoder.c      lha_lzss_decoder.h      \
 	lha_reader.c
 
 liblhasatest_a_CFLAGS=$(TEST_CFLAGS) -DALLOC_TESTING -I../test -g
