Add CRC checking of files.
Add function to LHAReader to decompress and perform a CRC check.
Test this with the lz4/lz5 files.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,6 +7,7 @@ HEADER_FILES =                     \
 	lha_reader.h
 
 SRC =                                                   \
+	crc16.c                 crc16.h                 \
 	lha_decoder.c           lha_decoder.h           \
 	lha_file_header.c                               \
 	lha_input_stream.c                              \
