--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,15 +6,20 @@ ARCHIVES=                                  \
   archives/larc333/lz4.lzs                 \
   archives/larc333/lz5.lzs                 \
   archives/larc333/sfx.com                 \
+  archives/larc333/subdir.lzs              \
   archives/lharc113/lh0.lzh                \
   archives/lharc113/lh1.lzh                \
   archives/lharc113/sfx.com                \
+  archives/lharc113/subdir.lzh             \
   archives/lha213/lh0.lzh                  \
   archives/lha213/lh5.lzh                  \
   archives/lha213/sfx.exe                  \
+  archives/lha213/subdir.lzh               \
   archives/lha255e/lh0.lzh                 \
   archives/lha255e/lh5.lzh                 \
   archives/lha255e/sfx.exe                 \
+  archives/lha255e/subdir.lzh              \
+  archives/lha_unix114i/subdir.lzh         \
   archives/lha_unix114i/lh0.lzh            \
   archives/lha_unix114i/lh5.lzh            \
   archives/lha_unix114i/lh6.lzh            \
