--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -8,6 +8,8 @@ HEADER_FILES =                     \
 
 SRC =                                                   \
 	crc16.c                 crc16.h                 \
+	ext_common.c            ext_common.h            \
+	ext_header.c            ext_header.h            \
 	lha_decoder.c           lha_decoder.h           \
 	lha_file_header.c                               \
 	lha_input_stream.c                              \
