Decode Unix extended header types.
Endianness functions moved to a separate file as part of this.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -8,7 +8,9 @@ HEADER_FILES =                     \
 
 SRC =                                                   \
 	crc16.c                 crc16.h                 \
+	endian.c                endian.h                \
 	ext_common.c            ext_common.h            \
+	ext_unix.c              ext_unix.h              \
 	ext_header.c            ext_header.h            \
 	lha_decoder.c           lha_decoder.h           \
 	lha_file_header.c                               \
