Include test-list-output in dist.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,13 +2,13 @@
 AM_CFLAGS=$(TEST_CFLAGS) -I../lib -g
 LDADD=$(top_builddir)/lib/liblhasatest.a libtestframework.a
 
-EXTRA_DIST=archives output
-
 COMPILED_TESTS=                       \
 	test-larc
-
-TESTS=$(COMPILED_TESTS)               \
+UNCOMPILED_TESTS=                     \
 	test-list-output
+
+TESTS=$(COMPILED_TESTS) $(UNCOMPILED_TESTS)
+EXTRA_DIST=archives output $(UNCOMPILED_TESTS)
 
 check_PROGRAMS=$(COMPILED_TESTS)
 check_LIBRARIES=libtestframework.a
