--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,7 +3,9 @@ AM_CFLAGS=$(TEST_CFLAGS) -I../lib -g
 LDADD=$(top_builddir)/lib/liblhasatest.a libtestframework.a
 
 COMPILED_TESTS=                       \
-	test-larc
+	test-larc                     \
+	test-lharc
+
 UNCOMPILED_TESTS=                     \
 	test-list-output
 
