--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,8 +3,7 @@ AM_CFLAGS=$(TEST_CFLAGS) -I../lib -g
 LDADD=$(top_builddir)/lib/liblhasatest.a libtestframework.a
 
 COMPILED_TESTS=                       \
-	test-larc                     \
-	test-lharc
+	test-decompress
 
 UNCOMPILED_TESTS=                     \
 	test-list-output
