--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 
 bin_PROGRAMS=lha
 
-lha_SOURCES=main.c list.c
+lha_SOURCES=main.c list.c extract.c
 lha_CFLAGS=-I$(top_builddir)/lib
 lha_LDADD=$(top_builddir)/lib/liblhasa.la
 
