Fix gcov coverage analysis.
Build a special lha command line tool for testing purposes (with
coverage enabled if appropriate), so that the output testing scripts
add to coverage as appropriate.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,11 +1,17 @@
 
 bin_PROGRAMS=lha
+check_PROGRAMS=test-lha
 
-lha_SOURCES =                             \
+SOURCES =                                 \
 	main.c                            \
 	list.c        list.h              \
 	extract.c     extract.h
 
+lha_SOURCES=$(SOURCES)
 lha_CFLAGS=$(MAIN_CFLAGS) -I$(top_builddir)/lib
 lha_LDADD=$(top_builddir)/lib/liblhasa.la
+
+test_lha_SOURCES=$(SOURCES)
+test_lha_CFLAGS=$(TEST_CFLAGS) -I$(top_builddir)/lib
+test_lha_LDADD=$(top_builddir)/lib/liblhasatest.a
 
