Clean gcov-generated files as part of make clean.
Also clean out .gcda files before running "make check" tests.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -34,3 +34,6 @@ liblhasa_la_SOURCES=$(SRC) $(HEADER_FILES)
 headerfilesdir=$(includedir)/liblhasa-1.0
 headerfiles_HEADERS=$(HEADER_FILES)
 
+clean-local:
+	rm -f *.gcno *.gcda *.c.gcov
+
