Display coverage summary after running tests.
Move gencov script to top level. Update configure to add a
BUILD_COVERAGE automake conditional. Add post-check hook to
test/Makefile.am to run gencov script on source files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 
 AUX_DIST_GEN = $(ac_aux_dir)
 
-EXTRA_DIST = $(AUX_DIST_GEN)
+EXTRA_DIST = $(AUX_DIST_GEN) gencov
 MAINTAINERCLEANFILES = $(AUX_DIST_GEN)
 
 $(pkgconfig_DATA) : config.status
