Fix problems with merging coverage graph files.
Always use the latest .gcno and .gcda files when running gcov.
Clear out .gcda files from test/ before running checks (in addition
to other directories).

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -30,8 +30,9 @@ if BUILD_COVERAGE
 check-am: check-prerun
 
 check-prerun:
-	@rm -f $(top_builddir)/lib/*.gcda  \
-	       $(top_builddir)/src/*.gcda
+	@rm -f $(top_builddir)/lib/*.gcda   \
+	       $(top_builddir)/src/*.gcda   \
+	       $(top_builddir)/test/*.gcda
 
 # Display coverage summary after running tests.
 
