--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -19,7 +19,7 @@ SRC =                                                   \
 	lha_file_header.c                               \
 	lha_input_stream.c                              \
 	null_decoder.c          null_decoder.h          \
-	lzhuf_decoder.c                                 \
+	lh1_decoder.c           lh1_decoder.h           \
 	lzss_decoder.c          lzss_decoder.h          \
 	lha_reader.c                                    \
 	pma_decoder.c           pma_decoder.h
