Add initial test suite for LHABasicReader.
Basic tests, more to come. Fix bug in lha_basic_reader_decode.
Update TODO.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,6 +4,7 @@ LDADD=$(top_builddir)/lib/liblhasatest.a libtestframework.a
 
 COMPILED_TESTS=                       \
 	test-crc16                    \
+	test-basic-reader             \
 	test-decoder                  \
 	test-decompress
 
