--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AM_PROG_CC_C_O
 
 AC_PROG_CXX
+AC_PROG_RANLIB
 AC_PROG_LIBTOOL
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
