Hook in -lh5- decoder.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -24,7 +24,7 @@ SRC =                                                   \
 	lha_reader.c                                    \
 	null_decoder.c          null_decoder.h          \
 	lh1_decoder.c           lh1_decoder.h           \
-	lh5_decoder.c                                   \
+	lh5_decoder.c           lh5_decoder.h           \
 	lz5_decoder.c           lz5_decoder.h           \
 	lzs_decoder.c           lzs_decoder.h           \
 	pm2_decoder.c           pm2_decoder.h
