--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -26,6 +26,7 @@ SRC =                                                   \
 	lh1_decoder.c           lh1_decoder.h           \
 	lh5_decoder.c           lh5_decoder.h           \
 	lh6_decoder.c           lh6_decoder.h           \
+	lh7_decoder.c           lh7_decoder.h           \
 	lz5_decoder.c           lz5_decoder.h           \
 	lzs_decoder.c           lzs_decoder.h           \
 	pm2_decoder.c           pm2_decoder.h
