Add common filter code for file iteration.
Refactor existing code to list / extract archives so that a list
of filters can be provided on the command line, matching the
behavior of the Unix lha tool.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,7 @@ check_PROGRAMS=test-lha
 
 SOURCES =                                 \
 	main.c                            \
+	filter.c      filter.h            \
 	list.c        list.h              \
 	extract.c     extract.h
 
