Split non-ANSI library code into separate files.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -16,6 +16,8 @@ SRC =                                                   \
 	ext_common.c                                    \
 	ext_unix.c                                      \
 	ext_header.c            ext_header.h            \
+	lha_arch_unix.c         lha_arch.h              \
+	lha_arch_win32.c                                \
 	lha_decoder.c           lha_decoder.h           \
 	lha_endian.c            lha_endian.h            \
 	lha_file_header.c                               \
