Safely escape potentially malicious filenames.
A malicious filename might contain escape characters that be
interpreted by some terminal emulators in harmful ways. Escape
all unsafe data when printing to the screen and add archive
file for regression testing.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,8 @@ SOURCES =                                 \
 	              options.h           \
 	filter.c      filter.h            \
 	list.c        list.h              \
-	extract.c     extract.h
+	extract.c     extract.h           \
+	safe.c        safe.h
 
 lha_SOURCES=$(SOURCES)
 lha_CFLAGS=$(MAIN_CFLAGS) -I$(top_builddir)/lib
