Set file modes to binary for testing.
On Windows, stdin and stdout are in text file mode by default.
Switch these to binary when running tests so that expected output
will be in Unix format and compare correctly to the expected output.

--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ else
 	is_gcc=false
 fi
 
-TEST_CFLAGS=""
+TEST_CFLAGS="-DTEST_BUILD"
 
 # Turn on all warnings for gcc.  Turn off optimisation for the test build.
 
