Add spec file for building RPM packages.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 
 AUX_DIST_GEN = $(ac_aux_dir)
 
-EXTRA_DIST = $(AUX_DIST_GEN) gencov
+EXTRA_DIST = $(AUX_DIST_GEN) gencov rpm.spec
 MAINTAINERCLEANFILES = $(AUX_DIST_GEN)
 
 $(pkgconfig_DATA) : config.status
