Add parsing of Windows timestamp headers.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -15,6 +15,7 @@ SRC =                                                   \
 	crc16.c                 crc16.h                 \
 	ext_common.c                                    \
 	ext_unix.c                                      \
+	ext_win.c                                       \
 	ext_header.c            ext_header.h            \
 	lha_arch_unix.c         lha_arch.h              \
 	lha_arch_win32.c                                \
