--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@
 bin_PROGRAMS=lha
 check_PROGRAMS=test-lha
 
-SOURCES =                                 \
+SOURCE_FILES=                             \
 	main.c                            \
 	              options.h           \
 	filter.c      filter.h            \
@@ -10,11 +10,11 @@ SOURCES =                                 \
 	extract.c     extract.h           \
 	safe.c        safe.h
 
-lha_SOURCES=$(SOURCES)
+lha_SOURCES=$(SOURCE_FILES)
 lha_CFLAGS=$(MAIN_CFLAGS) -I$(top_builddir)/lib
 lha_LDADD=$(top_builddir)/lib/liblhasa.la
 
-test_lha_SOURCES=$(SOURCES)
+test_lha_SOURCES=$(SOURCE_FILES)
 test_lha_CFLAGS=$(TEST_CFLAGS) -I$(top_builddir)/lib
 test_lha_LDADD=$(top_builddir)/lib/liblhasatest.a
 
