Separate header files into public/private.
Move the public interfaces into separate files in lib/public/.

--- a/configure.ac
+++ b/configure.ac
@@ -78,6 +78,7 @@ AC_OUTPUT([
     Makefile
     doc/Makefile
     lib/Makefile
+    lib/public/Makefile
     pkg/Makefile
     pkg/config.make
     src/Makefile
