--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,8 @@ AUX_DIST_GEN = $(ac_aux_dir)
 EXTRA_DIST = $(AUX_DIST_GEN) gencov rpm.spec
 MAINTAINERCLEANFILES = $(AUX_DIST_GEN)
 
-$(pkgconfig_DATA) : config.status
+pkgconfigdir = ${libdir}/pkgconfig
+pkgconfig_DATA = liblhasa.pc
 
 SUBDIRS=doc lib pkg src test
 
