--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -16,7 +16,7 @@ SRC =                                                   \
 	ext_header.c            ext_header.h            \
 	lha_arch_unix.c         lha_arch.h              \
 	lha_arch_win32.c                                \
-	lha_decoder.c                                   \
+	lha_decoder.c           lha_decoder.h           \
 	lha_endian.c            lha_endian.h            \
 	lha_file_header.c       lha_file_header.h       \
 	lha_input_stream.c      lha_input_stream.h      \
