Add output stream for writing LZH files.

--- a/lib/public/Makefile.am
+++ b/lib/public/Makefile.am
@@ -5,5 +5,6 @@ headerfiles_HEADERS=      \
    lha_decoder.h          \
    lha_file_header.h      \
    lha_input_stream.h     \
+   lha_output_stream.h    \
    lha_reader.h
 
