Tweak Travis build command to be more efficient.
Running autogen.sh also runs configure, so there is no need to run
configure explicitly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ compiler:
  - clang
  - gcc
 
-script: ./autogen.sh && ./configure && make && make check
+script: ./autogen.sh && make && make check
 
