--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 
 AUX_DIST_GEN = $(ac_aux_dir)
 
-EXTRA_DIST = $(AUX_DIST_GEN) gencov rpm.spec
+EXTRA_DIST = $(AUX_DIST_GEN) gencov rpm.spec Makefile.amiga
 MAINTAINERCLEANFILES = $(AUX_DIST_GEN)
 
 pkgconfigdir = ${libdir}/pkgconfig
