lh1: Factor out common code into separate file.
The same state tracking is needed for both encoding and decoding, so
factoring this out allows it to be reused for the encoder.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -25,6 +25,7 @@ SRC =                                                   \
 	lha_writer.c                                    \
 	macbinary.c             macbinary.h             \
 	null_decoder.c                                  \
+	lh1_common.c            lh1_common.h            \
 	lh1_decoder.c                                   \
 	lh5_decoder.c                                   \
 	lh6_decoder.c                                   \
