--- a/rpm.spec.in
+++ b/rpm.spec.in
@@ -4,7 +4,7 @@ Summary: Free LZH archive tool
 Version: @VERSION@
 Release: 1
 Source: https://github.com/downloads/fragglet/@PACKAGE@/@PACKAGE@-@VERSION@.tar.gz
-URL: http://fragglet.github.com/lhasa/
+URL: https://fragglet.github.io/lhasa/
 Group: Applications/Archiving
 BuildRoot: /var/tmp/@PACKAGE@-buildroot
 License: ISC license
