--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,6 @@
 AUX_DIST_GEN = $(ac_aux_dir)
 
+ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = $(AUX_DIST_GEN) gencov rpm.spec
 MAINTAINERCLEANFILES = $(AUX_DIST_GEN)
 
