--- a/configure.ac
+++ b/configure.ac
@@ -1,15 +1,16 @@
-AC_INIT(Lhasa, 0.3.1, fraggle@gmail.com, lhasa)
+AC_INIT([Lhasa],[0.3.1],[fraggle@gmail.com],[lhasa])
 AC_CONFIG_AUX_DIR(autotools)
 
 AM_INIT_AUTOMAKE([no-define])
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
-AM_PROG_CC_C_O
+LT_INIT
 
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+
+AC_PROG_CC
 AC_PROG_CXX
-AC_PROG_RANLIB
-AC_PROG_LIBTOOL
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
+AC_CONFIG_MACRO_DIRS([m4])
 
 if [[ "$GCC" = "yes" ]]; then
 	is_gcc=true
@@ -73,7 +74,7 @@ AC_SUBST(ac_aux_dir)
 
 AC_CONFIG_HEADERS([config.h:config.hin])
 
-AC_OUTPUT([
+AC_CONFIG_FILES([
     liblhasa.pc
     rpm.spec
     Makefile
@@ -85,3 +86,5 @@ AC_OUTPUT([
     src/Makefile
     test/Makefile
 ])
+
+AC_OUTPUT
