--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -5,8 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-    runs-on: macos-latest
+    runs-on: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v3
