--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -16,4 +16,4 @@ jobs:
     - name: make
       run: make
     - name: make check
-      run: make check || grep . test/*.log
+      run: make check || (grep . test/*.log; false)
