--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -12,8 +12,18 @@ jobs:
     - name: autogen
       run: ./autogen.sh
     - name: configure
-      run: ./configure
+      run: ./configure --enable-coverage --enable-valgrind
     - name: make
       run: make
     - name: make check
       run: make check || (grep . test/*.log; false)
+    - name: Generate coverage reports
+      run: |
+        ./gencov lib/*.c src/*.c
+        mkdir artifacts
+        tar cf - lib/*.gcov src/*.gcov | tar -C artifacts -xf -
+    - name: Upload coverage-annotated source files
+      uses: actions/upload-artifact@v1
+      with:
+        path: "artifacts"
+        name: coverage_reports
