--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -16,9 +16,9 @@ jobs:
     - name: configure
       run: ./configure --enable-coverage --enable-valgrind
     - name: make
-      run: make
+      run: make -j
     - name: make check
-      run: make check || (grep . test/*.log; false)
+      run: make -j check || (grep . test/*.log; false)
     - name: Generate coverage reports
       run: |
         ./gencov lib/*.c src/*.c
