--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -25,7 +25,8 @@ jobs:
     - name: make
       run: make -j
     - name: make check
-      run: make -j check || (grep . test/*.log; false)
+      run: |
+        make -j check || (cat test/test-suite.log; false)
     - name: Generate coverage reports
       run: |
         ./gencov lib/*.c src/*.c
