Build with bash.
Windows build defaults to Powershell which obviously isn't going to
work. I'm not sure which bash this is.

--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -55,8 +55,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: configure
+      shell: bash
       run: |
+        uname -a
         ./autogen.sh
     - name: make check
+      shell: bash
       run: |
         make -j check || (cat test/test-suite.log; false)
