--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -52,6 +52,10 @@ jobs:
   windows_build:
     runs-on: windows-latest
 
+    defaults:
+      run:
+        shell: msys2 {0}
+
     steps:
     - uses: actions/checkout@v3
     - uses: msys2/setup-msys2@v2
